# API

./: .env.example  README.md  pyproject.toml
schemas/: user.py
tests/: conftest.py  test_demowebshop_ui_api.py  test_reqres.py
utils/: base_session.py  endpoints.py
