[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["chevchelios <keks1001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = '^2.0.0-beta.8', allow-prereleases = true}
pytest = '^7.1.3'
allure-pytest = '^2.10.0'
python-dotenv = '^1.0.0'
requests = '^2.28.1'
pytest-voluptuous = '^1.2.0'
voluptuous = '^0.13.0'
curlify = '^2.2.1'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 'INFO'
log_cli_format = '%(asctime)s %(message)s'
log_cli_date_format = '%Y-%m-%d %H:%M:%S'
addopts = ' --alluredir=allure-results '